--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						</section>-->
 					</section>
 
-				<!-- Two -->
+				<!-- Two
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -128,8 +128,8 @@
 							</ul>
 						</div>
 					</section>
-
-				<!-- Three -->
+				-->
+				<!-- Three 
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
@@ -189,12 +189,12 @@
 					</section>
 
 			</div>
-
+			-->
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Duelers Network. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
