--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Welcome to the Duelers Network</h1>
+							<h1>Duelers Network</h1>
 							<p>A project under development.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
