--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
-							<!--
+						
 							<div class="content">
 								<div class="inner">
-									<h2>Under Development</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Check back soon.</h2>
+									<p>🤔</p>
+									<!--
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
+									-->
 								</div>
-							</div>-->
+							</div>
 						</section>
 						<!--
 						<section>
