--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						
 							<div class="content">
 								<div class="inner">
-									<h2>Check back soon.</h2>
+									<h2>Check back later.</h2>
 									<p>🤔</p>
 									<!--
 									<ul class="actions">
