--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 						
 							<div class="content">
 								<div class="inner">
-									<h2>Check back later.</h2>
-									<p>🤔</p>
+									<h2>🤔</h2>
+									<p>Check back later.</p>
 									<!--
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
