--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Duelers Network</title>
+		<title>duelers network</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Enter</a></li>
-							<li><a href="#one">About</a></li>
+							<li><a href="#intro">enter</a></li>
+							<li><a href="#one">about</a></li>
 							<!--
 							<li><a href="#two">What we do</a></li>
 							<li><a href="#three">Get in touch</a></li>
@@ -36,7 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Duelers Network</h1>
+							<h1>duelers network</h1>
 							<p>A project under development.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -52,7 +52,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>🤔</h2>
-									<p>Check back later.</p>
+									<p>check back later...</p>
 									<!--
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -196,7 +196,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Duelers Network. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; duelers network. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
